--- a/DutchTreat/wwwroot/css/site.css
+++ b/DutchTreat/wwwroot/css/site.css
@@ -57,3 +57,14 @@
     width: auto;
 }
 
+
+menu li {
+    display: inline;
+}
+    menu li::after {
+        content: ' |';
+    }
+
+    menu li:last-of-type::after {
+        content: '';
+    }
