--- a/DutchTreat/Views/Shared/_Layout.cshtml
+++ b/DutchTreat/Views/Shared/_Layout.cshtml
@@ -8,9 +8,9 @@
     <header>Welcome to Dutch Treat</header>
     <menu>
         <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/app/contact">Contact</a></li>
-            <li><a href="/app/about">About</a></li>
+            <li><a asp-controller="App" asp-action="Index">Home</a></li>
+            <li><a asp-controller="App" asp-action="Contact">Contact</a></li>
+            <li><a asp-controller="App" asp-action="About">About</a></li>
         </ul>
     </menu>
     <section>
