Link Form to a Model

--- a/DutchTreat/Views/App/Index.cshtml
+++ b/DutchTreat/Views/App/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
-    <div>
+    <div class="product-info">
         <img src="~/img/VanGogh.jpg"/>
         <h3>Mug</h3>
         <ul>
@@ -11,15 +11,6 @@
             <li>Description: Self-portratir</li>
         </ul>
         <button id="buyButton">Buy</button>
-        <form>
-            <label>Username:</label>
-            <input/>
-            <label>Email:</label>
-            <input type="email" />
-            <label>Message:</label>
-            <textarea rows="4" cols="80"></textarea> 
-            <input type="submit" value="Send Message"/>
-        </form>
     </div>
 
 
