--- a/DutchTreat/Views/App/Contact.cshtml
+++ b/DutchTreat/Views/App/Contact.cshtml
@@ -2,22 +2,25 @@
 @{ 
     ViewBag.Title = "Contact Us";
 }
-    <div id="theForm">
         <form method="post">
+            <div asp-validation-summary="ModelOnly"></div>
             <label asp-for="Name">Your Name:</label>
             <br/>
             <input asp-for="Name"/>
+            <span asp-validation-for="Name"></span>
             <br/>
             <label asp-for="Email">Email:</label>
             <input type="email" asp-for="Email" />
+            <span asp-validation-for="Email"></span>
             <br/>
             <label asp-for="Subject">Subject:</label>
             <input type="text" asp-for="Subject"/>
+            <span asp-validation-for="Subject"></span>
             <br/>
             <label asp-for="Message">Message:</label>
             <br/>
             <textarea rows="4" cols="80" asp-for="Message"></textarea> 
+            <span asp-validation-for="Message"></span>
             <br/>
             <input type="submit" value="Send Message"/>
         </form>
-    </div>
