--- a/DutchTreat/wwwroot/css/site.css
+++ b/DutchTreat/wwwroot/css/site.css
@@ -1,4 +1,7 @@
-﻿
+﻿header {
+    background-color: gray;
+}
+/*
 #theForm {
     background-color: #d0d0d0;
 }
@@ -68,3 +71,4 @@ menu li {
     menu li:last-of-type::after {
         content: '';
     }
+*/
