--- a/DutchTreat/Views/Shared/_Layout.cshtml
+++ b/DutchTreat/Views/Shared/_Layout.cshtml
@@ -3,24 +3,37 @@
 <head>
     <title>Dutch Treat: @ViewBag.Title</title>
     <link href="~/css/site.css" rel="stylesheet" />
+    <link href="~/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/node_modules/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
 </head>
 <body>
-    <header>Welcome to Dutch Treat</header>
-    <menu>
-        <ul>
-            <li><a asp-controller="App" asp-action="Index">Home</a></li>
-            <li><a asp-controller="App" asp-action="Contact">Contact</a></li>
-            <li><a asp-controller="App" asp-action="About">About</a></li>
-        </ul>
-    </menu>
-    <section>
-        <h2>@ViewBag.Title</h2>
+    <header class="container">
+        <nav class="navbar navbar-dark bg-dark navbar-expand-md">
+            <h1 class="navbar-brand"><i class="fa fa-paint-brush"></i>Welcome to Dutch Treat</h1>
+            <button class="navbar-toggler" data-toggle="collapse" data-target="theMenu">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div id="theMenu" class="navbar-collapse collapse">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" asp-controller="App" asp-action="Index">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" asp-controller="App" asp-action="Contact">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" asp-controller="App" asp-action="About">About</a></li>
+                </ul>
+            </div>
+
+        </nav>
+    </header>
+    <section class="container">
+        <h2 class="text-center">@ViewBag.Title</h2>
         @RenderBody()
     </section>
-    <footer>Copyright 2017 Dutch Treat LLC</footer>
+    <footer class="container">
+        <div>Copyright 2017 Dutch Treat LLC</div>
+    </footer>
 
-    <script src="~/node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="~/js/index.js"></script>
-    @RenderSection("scripts", false)
+        <script src="~/node_modules/jquery/dist/jquery.min.js"></script>
+        <script src="~/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="~/js/index.js"></script>
+        @RenderSection("scripts", false)
 </body>
 </html>
